@@ -118,8 +118,7 @@ void slimproto_destroy(slimproto_t *p) {
 
 static void *proto_thread(void *ptr) {
 	int r, i;
-	bool disconnected;
-	
+
 	slimproto_t *p = (slimproto_t *) ptr;
 
 	pthread_mutex_lock(&p->slimproto_mutex);				
@@ -142,7 +141,7 @@ static void *proto_thread(void *ptr) {
 
 				while (proto_recv(p) >= 0) {
 					pthread_mutex_lock(&p->slimproto_mutex);
-					disconnected = p->state != PROTO_CONNECTED;
+					const bool disconnected = p->state != PROTO_CONNECTED;
 					pthread_mutex_unlock(&p->slimproto_mutex);
 					if (disconnected) {
 						DEBUGF("proto_thread: disconnected state:%i\n", p->state);
@@ -175,10 +174,9 @@ static void *proto_thread(void *ptr) {
 }
 
 void slimproto_add_command_callback(slimproto_t *p, const char *cmd, slimproto_command_callback_t *callback, void *user_data) {
-	int i;
 	pthread_mutex_lock(&p->slimproto_mutex);				
 
-	i = p->num_command_callbacks;
+	int i = p->num_command_callbacks;
 	p->command_callbacks[i].cmd = strdup(cmd);
 	p->command_callbacks[i].callback = (void *) callback; // FIXME
 	p->command_callbacks[i].user_data = user_data;
@@ -188,10 +186,9 @@ void slimproto_add_command_callback(slimproto_t *p, const char *cmd, slimproto_c
 }
 
 void slimproto_add_connect_callback(slimproto_t *p, slimproto_connect_callback_t *callback, void *user_data) {
-	int i;
 	pthread_mutex_lock(&p->slimproto_mutex);				
 
-	i = p->num_connect_callbacks;
+	int i = p->num_connect_callbacks;
 	p->connect_callbacks[i].callback = (void *) callback; // FIXME
 	p->connect_callbacks[i].user_data = user_data;
 	p->num_connect_callbacks++;
@@ -251,7 +248,6 @@ int slimproto_configure_socket(int sockfd, int socktimeout)
 
 int slimproto_connect(slimproto_t *p, const char *server_addr, int port) {
 	struct hostent *server;
-	int return_value = 0; 
 
 	DEBUGF("slimproto_connect: (%s, %i)\n", server_addr, port);
 
@@ -279,6 +275,7 @@ int slimproto_connect(slimproto_t *p, const char *server_addr, int port) {
 	// Wait for confirmation that the connection opens correctly.  This
 	// will fail, for example, if Squeezebox Server is not running when the
 	// connection attempt happens.
+	int return_value = 0; 
 	while (p->state != PROTO_CONNECTED) {
 		pthread_cond_wait(&p->slimproto_cond, &p->slimproto_mutex);
 		if (p->state == PROTO_CLOSED) {
@@ -362,7 +359,7 @@ int slimproto_close(slimproto_t *p) {
 static int proto_recv(slimproto_t *p) {
 	short len;
 	unsigned char buf[BUF_LENGTH];
-	int r, n, i;
+	int r, n;		
 
         /* Fix receive error on quiting */
 	if (p->state != PROTO_CONNECTED) return -1;
@@ -405,6 +402,7 @@ static int proto_recv(slimproto_t *p) {
 	DEBUGF("proto_recv: cmd=%4.4s len=%i\n", buf+2, len);
 
 	buf[len]=0;
+	int i;
 	for (i=0; i<p->num_command_callbacks; i++) {
 		if (strncmp(p->command_callbacks[i].cmd, (char*)(buf+2), 4) == 0) {
 			int ok = (p->command_callbacks[i].callback)(p, buf, len, p->command_callbacks[i].user_data);
@@ -421,9 +419,6 @@ static int proto_recv(slimproto_t *p) {
 }
 
 void slimproto_parse_command(const unsigned char *buf, int buf_len, slimproto_msg_t *msg) {
-	int http_len, val, i;
-	char str[2] = { '\0', '\0' };
-	
 	memset(msg, 0, sizeof(slimproto_msg_t));
 	
 	if (strncmp((char*)(buf+2), "strm", 4) == 0) {
@@ -446,7 +441,7 @@ void slimproto_parse_command(const unsigned char *buf, int buf_len, slimproto_ms
 		msg->strm.replay_gain = unpackN4(buf, 20);
 		msg->strm.server_port = unpackN2(buf, 24);
 		msg->strm.server_ip = unpackN4(buf, 26);
-		http_len = msg->strm.length-28;
+		int http_len = msg->strm.length-28;
 
 		if (http_len > 0) {
 			assert(http_len+1 < sizeof(msg->strm.http_hdr));
@@ -468,9 +463,10 @@ void slimproto_parse_command(const unsigned char *buf, int buf_len, slimproto_ms
 		msg->vers.length = unpackN2(buf, 0);
 		memcpy(msg->vers.cmd, buf+2, 4);
 
-		val =  0;
+		int val =  0;
 		// This assumes the version format is a.b.c, where
 		// a, b, c are numbers of at most 2 digits.
+		int i;
 		for( i = 6; i <= buf_len; ++i ) {
 			if(buf[i]=='.' || i == buf_len) {
 				msg->vers.version <<= 8;
@@ -479,7 +475,7 @@ void slimproto_parse_command(const unsigned char *buf, int buf_len, slimproto_ms
 			}
 			else if (isdigit(buf[i])) {
 				val <<= 4;
-				str[0] = buf[i];
+				char str[2] = { buf[i], '\0' };
 				val += atoi(str);
 			}
 		}
@@ -491,7 +487,6 @@ void slimproto_parse_command(const unsigned char *buf, int buf_len, slimproto_ms
 }
 
 int slimproto_dsco(slimproto_t *p, int dscoCode) {
-	unsigned char msg[SLIMPROTO_MSG_SIZE];
 
 	pthread_mutex_lock(&p->slimproto_mutex);
 	if (p->state != PROTO_CONNECTED) {
@@ -500,6 +495,7 @@ int slimproto_dsco(slimproto_t *p, int dscoCode) {
 	}
 	pthread_mutex_unlock(&p->slimproto_mutex);
 
+	unsigned char msg[SLIMPROTO_MSG_SIZE];
 	memset(&msg, 0, SLIMPROTO_MSG_SIZE);
 
 	packA4(msg, 0, "DSCO");
@@ -514,7 +510,6 @@ int slimproto_dsco(slimproto_t *p, int dscoCode) {
  * upgrade = 0x01 -> player is goint out for firmware upgrade
  */
 int slimproto_goodbye(slimproto_t *p, u8_t upgrade) {
-	unsigned char msg[SLIMPROTO_MSG_SIZE];
 
 	pthread_mutex_lock(&p->slimproto_mutex);
 	if (p->state != PROTO_CONNECTED) {
@@ -523,6 +518,7 @@ int slimproto_goodbye(slimproto_t *p, u8_t upgrade) {
 	}
 	pthread_mutex_unlock(&p->slimproto_mutex);
 
+	unsigned char msg[SLIMPROTO_MSG_SIZE];
 	memset(&msg, 0, SLIMPROTO_MSG_SIZE);
 
         packA4(msg, 0, "BYE!");
@@ -534,7 +530,6 @@ int slimproto_goodbye(slimproto_t *p, u8_t upgrade) {
 
 int slimproto_helo(slimproto_t *p, char device_id, char revision, const char *macaddress, char isGraphics, char isReconnect) {	
 	unsigned char msg[SLIMPROTO_MSG_SIZE];
-	int channelList = 0;
 	memset(&msg, 0, SLIMPROTO_MSG_SIZE);
 
 	packA4(msg, 0, "HELO");
@@ -542,6 +537,7 @@ int slimproto_helo(slimproto_t *p, char device_id, char revision, const char *ma
 	packC(msg, 8, device_id);
 	packC(msg, 9, revision);
 	memcpy(msg+10, macaddress, 6);
+	int channelList = 0;
 	if (isGraphics)
 		channelList |= 0x8000;
 	if (isReconnect)
@@ -561,31 +557,6 @@ int slimproto_ir(slimproto_t *p, int format, int noBits, int irCode) {
 	packC(msg, 12, format);
 	packC(msg, 13, noBits);
 	packN4(msg, 14, irCode);
-	
-	return slimproto_send(p, msg);
-}
-
-int slimproto_button(slimproto_t *p, int button) {
-	unsigned char msg[SLIMPROTO_MSG_SIZE];
-	memset(&msg, 0, SLIMPROTO_MSG_SIZE);
-
-	packA4(msg, 0, "BUTN");
-	packN4(msg, 4, 8);
-	slimproto_set_jiffies(p, msg, 8);
-	packN4(msg, 12, button);
-	
-	return slimproto_send(p, msg);
-}
-
-int slimproto_knob(slimproto_t *p, long position) {
-	unsigned char msg[SLIMPROTO_MSG_SIZE];
-	memset(&msg, 0, SLIMPROTO_MSG_SIZE);
-
-	packA4(msg, 0, "KNOB");
-	packN4(msg, 4, 9);
-	slimproto_set_jiffies(p, msg, 8);
-	packN4(msg, 12, ((unsigned long)position)); /* Signed relative position */
-	packC(msg, 16, 0);  /* Sync is always 0 */
 	
 	return slimproto_send(p, msg);
 }
